--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Appointments</string>
+    <string name="button_addAppointment">Add Appointment</string>
+    <string name="hint_appointmentPatient">Patient Name</string>
+    <string name="hint_appointmentDate">Date</string>
 </resources>
