Created MainApp to handle the initialization of the app. Created a appointment list to store and list out the added appointments to the system. Using Cards and recyclerview to list these appointments in a new screen. Implemented a menu and action bars to navigate between different pages.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="button_addAppointment">Add Appointment</string>
     <string name="hint_appointmentPatient">Patient Name</string>
     <string name="hint_appointmentDate">Date</string>
+    <string name="menu_addAppointment">Add</string>
+    <string name="menu_cancelAppointment">Cancel</string>
 </resources>
