Updated the model, adding functionality to the add image feature, allowed user to select images, the images were displayed and were also able to be edited etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="menu_cancelAppointment">Cancel</string>
     <string name="enter_appointment_title"> Please enter a Appointment Title </string>
     <string name="save_appointment"> Save Appointment </string>
+    <string name="button_addImage"> Add Image </string>
+    <string name="select_appointment_image">Select placemark image</string>
+    <string name="change_appointment_image">Change appointment image</string>
 </resources>
