--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="enter_appointment_title"> Please enter a Appointment Title </string>
     <string name="save_appointment"> Save Appointment </string>
     <string name="button_addImage"> Add Image </string>
-    <string name="select_appointment_image">Select placemark image</string>
+    <string name="select_appointment_image">Select appointment image</string>
     <string name="change_appointment_image">Change appointment image</string>
+    <string name="button_location">Set Location</string>
+    <string name="title_activity_map">MapActivity</string>
 </resources>
