--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
     <string name="button_addAppointment">Add Appointment</string>
     <string name="hint_appointmentPatient">Patient Name</string>
     <string name="hint_appointmentDate">Date</string>
+    <string name="hint_appointmentTime">Time</string>
+    <string name="hint_appointmentService">Service</string>
     <string name="menu_addAppointment">Add</string>
+    <string name="menu_deleteAppointment">Delete</string>
     <string name="menu_cancelAppointment">Cancel</string>
     <string name="enter_appointment_title"> Please enter a Appointment Title </string>
     <string name="save_appointment"> Save Appointment </string>
